--- a/src/Pages/Weather/style.css
+++ b/src/Pages/Weather/style.css
@@ -1,100 +1,82 @@
+@import url("https://fonts.googleapis.com/css2?family=Unbounded&display=swap");
+
 * {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-html {
-  background-color: #1c437e;
-}
-.app-name {
-  font-size: 2.3rem;
-  color: white;
-}
-
-/* app box */
-.component {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  width: 500px;
-  min-height: 440px;
-  background-color: #1c437e;
-  text-align: center;
-  margin: 128px auto;
-  border-radius: 10px;
-  padding-bottom: 32px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-/* City Search  */
-.city-search {
-  width: 200px;
   box-sizing: border-box;
-  border: 2px solid #ccc;
-  outline: none;
-  border-radius: 20px;
-  font-size: 16px;
-  
-  /* background-color: rgba(226, 226, 226, 0.6); */
-  background-image: url(./img/searchicon.jpg);
-  background-position: 10px 10px;
-  background-repeat: no-repeat;
-  padding: 12px 20px 12px 40px;
-  -webkit-transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
-}
-.city-search:focus {
-  width: 60%;
-  /* background-color: white; */
+  margin: 0;
+  padding: 0;
+  font-family: "Unbounded", cursive;
 }
 
-/* city name */
-.city-name {
-  font-size: 1.25em;
-  color: white;
-}
-h2 {
-  margin-bottom: 10px;
+body {
+  overflow-x: hidden;
 }
 
-/* current date */
-.date {
-  font-size: 1.25em;
-  font-weight: 500;
-  color: white;
-}
-
-/* weather icon and temp */
-.icon-temp {
-  font-size: 4rem;
-  font-weight: 700;
-  color: #f9f9fa;
+.bg_img {
+  width: 100%;
+  min-height: 100vh;
+  background: url(https://tse4.mm.bing.net/th?id=OIP.Iji-QyX53c09jOE-Eu9qygHaFP&pid=Api&P=0&h=180) no-repeat center center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.deg {
-  font-size: 2rem;
+  flex-direction: column;
+  color: #fff;
 }
 
-/* weather description and wind speed */
-.des-wind {
-  font-weight: 500;
+.input {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.group {
   display: flex;
-  flex-direction: row;
-  gap : 35px;
-  border: 1px solid white;
-  color: white;
+  gap: 10px;
+  align-items: center;
+  margin: 1rem 0;
 }
 
-/* Error message */
-.error-message {
-  display: block;
+.city {
+  margin-top: 2rem;
+}
+
+.city,
+.temp {
+  font-size: 3rem;
+}
+
+.box_container {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+}
+
+.box {
+  padding: 1rem;
+  border-radius: 12px;
+  background-color: rgba(0, 0, 0, 0.75);
+  width: 220px;
   text-align: center;
-  color: rgb(20, 2, 2);
-  font-size: 30px;
-  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  transition: transform 0.2s;
 }
 
-::placeholder{
-  color: grey;
+.box:hover {
+  transform: scale(1.1);
+}
+
+@media only screen and (max-width: 730px) {
+  .bg_img {
+    padding: 2rem 0;
+  }
+
+  .box_container {
+    flex-direction: column;
+  }
+
+  .box,
+  .input {
+    width: 70vw;
+  }
 }
